# cookiecutter-aprsd-plugin

./: README.rst  cookiecutter.json
hooks/: post_gen_project.py  pre_gen_project.py
{{cookiecutter.plugin_name}}/: Makefile  README.rst  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini
{{cookiecutter.plugin_name}}/docs/: Makefile  conf.py  installation.rst
{{cookiecutter.plugin_name}}/tests/: __init__.py  test_{{cookiecutter.module_name}}.py
{{cookiecutter.plugin_name}}/{{cookiecutter.module_name}}/: __init__.py  {{cookiecutter.module_name}}.py
{{cookiecutter.plugin_name}}/{{cookiecutter.module_name}}/conf/: __init__.py  main.py  opts.py
{{cookiecutter.repo_name}}/: Makefile  README.rst  setup.cfg
{{cookiecutter.repo_name}}/{{cookiecutter.project_slug}}/: {{cookiecutter.project_slug}}.py
