[metadata]
name = {{cookiecutter.plugin_name}}
long_description = file: README.rst
long_description_content_type = text/x-rst
author = {{cookiecutter.full_name}}
author_email = {{cookiecutter.email}}
license_file = LICENSE
classifier =
    Topic :: Communications :: Ham Radio
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
description_file =
    README.rst
summary = {{cookiecutter.short_description}}

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    {{cookiecutter.module_name}}

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[mypy]
ignore_missing_imports = True
strict = True
